<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calculadora.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="bottom">
        <EditText
            android:id="@+id/TeDisplay"
            android:layout_width="match_parent"
            android:cursorVisible="false"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:fontFamily="sans-serif"
            android:textSize="40sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight="9">


        <GridLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alignmentMode="alignBounds"
            android:columnCount="4"


            android:rowCount="4">

            <TextView
                android:id="@+id/numero_7"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_column="0"
                android:layout_row="0"
                android:onClick="clickSiete"
                android:text="@string/siete" />

            <TextView
                android:id="@+id/numero_8"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:onClick="clickOcho"
                android:text="@string/ocho" />

            <TextView
                android:id="@+id/numero_9"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:onClick="clickNueve"
                android:text="@string/nueve" />

            <TextView
                android:id="@+id/numero_4"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:onClick="clickCuatro"
                android:text="@string/cuatro" />

            <TextView
                android:id="@+id/numero_5"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:onClick="clickCinco"
                android:text="@string/cinco" />

            <TextView
                android:id="@+id/numero_6"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="1"
                android:onClick="clickSeis"
                android:text="@string/seis" />

            <TextView
                android:id="@+id/resta"
                style="@style/AppTheme.BotonCalculadora.Rojo"
                android:layout_column="3"
                android:layout_gravity="fill"
                android:layout_row="1"
                android:gravity="center"
                android:onClick="clickResta"
                android:text="@string/menos" />

            <TextView
                android:id="@+id/suma"
                style="@style/AppTheme.BotonCalculadora.Rojo"
                android:layout_column="3"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0"
                android:onClick="clickSuma"
                android:text="@string/plus" />

            <TextView
                android:id="@+id/numero_1"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_column="0"
                android:layout_row="2"
                android:onClick="clickUno"
                android:text="@string/uno" />

            <TextView
                android:id="@+id/numero_2"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:onClick="clickDos"
                android:text="@string/dos" />

            <TextView
                android:id="@+id/numero_3"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="2"
                android:onClick="clickTres"
                android:text="@string/tres" />

            <TextView
                android:id="@+id/mult"
                style="@style/AppTheme.BotonCalculadora.Rojo"
                android:layout_column="3"
                android:layout_gravity="fill_horizontal"
                android:layout_row="2"
                android:gravity="center"
                android:onClick="clickMult"
                android:text="@string/multi" />

            <TextView
                android:id="@+id/punto"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="3"
                android:gravity="center_horizontal"
                android:onClick="clickPunto"
                android:text="@string/punto" />

            <TextView
                android:id="@+id/numero_0"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_column="1"
                android:layout_row="3"
                android:onClick="clickCero"
                android:text="@string/cero" />

            <TextView
                android:id="@+id/signo_igual"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="3"
                android:onClick="clickIgual"
                android:text="@string/igual" />

            <TextView
                android:id="@+id/divi"
                style="@style/AppTheme.BotonCalculadora.Rojo"
                android:layout_column="3"
                android:layout_gravity="fill_horizontal"
                android:layout_row="3"
                android:onClick="clickDiv"
                android:text="@string/div" />



        </GridLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3">

            <TextView
                android:id="@+id/clear"
               android:gravity="center"
                android:textSize="26sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/c"
                android:onClick="Clear"
                 />

        </LinearLayout>


    </LinearLayout>





